[package]
name = "pexels"
version = "0.2.1"
authors = ["Andra Antariksa <andra.antariksa@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/andraantariksa/pexels"
description = "A Rust wrapper for Pexels API"
readme = "README.md"
keywords = ["pexels", "api"]
categories = ["api"]

[badges]
travis-ci = { repository = "https://travis-ci.org/andraantariksa/pexels", branch = "master" }

[dependencies]
reqwest = "0.9.16"
serde_json = "1.0.39"